fixed button text overlaping on mobile

--- a/blog-frontend/src/singlePost.css
+++ b/blog-frontend/src/singlePost.css
@@ -108,7 +108,7 @@ button {
   border: none;
   border-radius: none;
   height: 30px;
-  letter-spacing: 20px;
+  letter-spacing: 15px;
   font-style:oblique;
   font-size: 80%;
   width:50%;
